<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/TranslucentTheme"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <include
        layout="@layout/activity_main_content_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="290dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/w0">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/user_info"
            android:layout_width="match_parent"
            android:layout_height="105dp"
            android:background="@drawable/bg_yellow">

            <ImageView
                android:id="@+id/id_activity_main_layout_imageview_user"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:contentDescription="@string/picture_description"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/id_activity_main_layout_textview_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="36dp"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/id_activity_main_layout_imageview_user"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/id_activity_main_layout_textview_credit"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/white_all_10dp"
                android:gravity="center"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textColor="@color/b1"
                android:textSize="10sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/id_activity_main_layout_textview_username"
                tools:ignore="SmallSp" />

        </android.support.constraint.ConstraintLayout>

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/id_activity_main_layout_linearlayout_set"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_info">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/id_activity_main_layout_linearlayout_mywallet"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:drawablePadding="20dp"
                    android:drawableStart="@mipmap/ic_moneybag"
                    android:paddingBottom="15dp"
                    android:paddingStart="30dp"
                    android:paddingTop="15dp"
                    android:text="@string/my_wallet"
                    android:textColor="@color/b1"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/id_activity_main_layout_linearlayout_parkorder"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:drawablePadding="20dp"
                    android:drawableStart="@mipmap/ic_record"
                    android:paddingBottom="15dp"
                    android:paddingStart="30dp"
                    android:paddingTop="15dp"
                    android:text="@string/park_record"
                    android:textColor="@color/b1"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/id_activity_main_layout_linearlayout_mywallet"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/id_activity_main_layout_linearlayout_mycarnumble"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:drawablePadding="20dp"
                    android:drawableStart="@mipmap/ic_licenseplate"
                    android:paddingBottom="15dp"
                    android:paddingStart="30dp"
                    android:paddingTop="15dp"
                    android:text="@string/my_card_number"
                    android:textColor="@color/b1"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/id_activity_main_layout_linearlayout_parkorder"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/id_activity_main_layout_linearlayout_mypark"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:drawablePadding="20dp"
                    android:drawableStart="@mipmap/ic_parkinglot"
                    android:paddingBottom="15dp"
                    android:paddingStart="30dp"
                    android:paddingTop="15dp"
                    android:text="@string/my_park"
                    android:textColor="@color/b1"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/id_activity_main_layout_linearlayout_mycarnumble"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/id_activity_main_layout_linearlayout_mycollection"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:drawablePadding="20dp"
                    android:drawableStart="@mipmap/ic_collection"
                    android:paddingBottom="15dp"
                    android:paddingStart="30dp"
                    android:paddingTop="15dp"
                    android:text="@string/my_collect"
                    android:textColor="@color/b1"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/id_activity_main_layout_linearlayout_mypark"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/id_activity_main_layout_linearlayout_find"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:drawablePadding="20dp"
                    android:drawableStart="@mipmap/ic_find"
                    android:paddingBottom="15dp"
                    android:paddingStart="30dp"
                    android:paddingTop="15dp"
                    android:text="@string/find"
                    android:textColor="@color/b1"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/id_activity_main_layout_linearlayout_mycollection"
                    tools:ignore="RtlSymmetry" />


            </android.support.constraint.ConstraintLayout>

        </ScrollView>

        <TextView
            android:id="@+id/id_activity_main_layout_linearlayout_set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="15dp"
            android:drawableStart="@mipmap/ic_setting"
            android:paddingBottom="15dp"
            android:paddingEnd="30dp"
            android:paddingStart="15dp"
            android:paddingTop="16dp"
            android:text="@string/setting"
            android:textColor="@color/b1"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/id_activity_main_layout_linearlayout_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="15dp"
            android:drawableStart="@mipmap/ic_share1"
            android:paddingBottom="15dp"
            android:paddingEnd="15dp"
            android:paddingStart="15dp"
            android:paddingTop="16dp"
            android:text="@string/share"
            android:textColor="@color/b1"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/id_activity_main_layout_linearlayout_set" />

    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.DrawerLayout>
