<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <TextView
        android:id="@+id/id_activity_searchaddress_layout_textview_goback"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="center"
        android:paddingEnd="14dp"
        android:paddingStart="14dp"
        android:text="@string/cancel"
        android:textColor="@color/b1"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/id_activity_searchaddress_layout_linearlayout_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/id_activity_searchaddress_layout_linearlayout_search" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/id_activity_searchaddress_layout_linearlayout_search"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/little_yuan_white_5dp"
        app:layout_constraintEnd_toStartOf="@+id/id_activity_searchaddress_layout_textview_goback"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/search_address_icon"
            android:layout_width="17dp"
            android:layout_height="17dp"
            android:layout_marginStart="12dp"
            android:contentDescription="@string/picture_description"
            android:src="@mipmap/ic_search"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <AutoCompleteTextView
            android:id="@+id/id_activity_searchaddress_layout_etextview_input"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/nocolor"
            android:completionThreshold="1"
            android:dropDownHeight="wrap_content"
            android:dropDownHorizontalOffset="-300dp"
            android:dropDownWidth="match_parent"
            android:gravity="center_vertical"
            android:hint="@string/where_do_you_want_to_go"
            android:lines="1"
            android:paddingBottom="10dp"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:singleLine="true"
            android:textColor="@color/b1"
            android:textColorHint="@color/gray"
            android:textCursorDrawable="@null"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/search_address_icon"
            tools:ignore="RtlSymmetry" />

        <ProgressBar
            android:id="@+id/id_activity_searchaddress_layout_progressbar"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="10dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/id_activity_searchaddress_layout_imageview_clean"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/id_activity_searchaddress_layout_imageview_clean"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/picture_description"
            android:src="@mipmap/ic_close2"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/id_activity_searchaddress_layout_linearlayout_downpart"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="50dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/little_yuan_white_5dp"
        app:layout_constraintBottom_toTopOf="@+id/id_activity_searchaddres_layout_imageview_mic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_activity_searchaddress_layout_linearlayout_search">

        <TextView
            android:id="@+id/search_address_history_record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:text="@string/history_record"
            android:textColor="@color/g6"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/id_activity_searchaddress_layout_linearlayout_clean"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:drawableStart="@mipmap/ic_del"
            android:padding="15dp"
            android:text="@string/clear_history_record"
            android:textColor="@color/gray"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ListView
            android:id="@+id/id_activity_searchaddress_layout_listview"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:divider="#D2D2D2"
            android:dividerHeight="1dp"
            app:layout_constraintBottom_toTopOf="@+id/id_activity_searchaddress_layout_linearlayout_clean"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_address_history_record" />

    </android.support.constraint.ConstraintLayout>

    <ImageView
        android:id="@+id/id_activity_searchaddres_layout_imageview_mic"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/ic_bigmic"
        android:contentDescription="@string/picture_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>